# gst-plugins-dlnasrc

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  gstdlnasrc.c  gstdlnasrc.h  util.c  util.h
tests/: Makefile.am  test-util.c
